--- a/app/src/main/res/layout/activity_add_mode.xml
+++ b/app/src/main/res/layout/activity_add_mode.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/txtTime"
         android:layout_width="150dp"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
@@ -39,9 +39,9 @@
         android:layout_height="wrap_content"
         android:text="unit"
         android:textColor="@color/gray"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editAmount"
+        app:layout_constraintEnd_toEndOf="@+id/txtDate"
+        app:layout_constraintTop_toTopOf="@+id/editAmount" />
 
     <Button
         android:id="@+id/save"
@@ -56,7 +56,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/btnReset"
         app:layout_constraintTop_toBottomOf="@+id/textView20"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -114,7 +114,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Spinner
-        android:id="@+id/editText"
+        android:id="@+id/spinnerFood"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
@@ -123,13 +123,13 @@
         android:inputType="numberSigned"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="@+id/txtDate"
+        app:layout_constraintStart_toStartOf="@+id/txtDate"
         app:layout_constraintTop_toTopOf="@+id/textView2"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editAmount"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
@@ -139,12 +139,12 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/txtDate"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtDate"
         android:layout_width="150dp"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
@@ -157,7 +157,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btnReset"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
