--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/txtTime"
         android:layout_width="150dp"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
@@ -39,9 +39,9 @@
         android:layout_height="wrap_content"
         android:text="cm"
         android:textColor="@color/app_color"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editLength"
+        app:layout_constraintEnd_toEndOf="@+id/txtDate"
+        app:layout_constraintTop_toTopOf="@+id/editLength" />
 
     <Button
         android:id="@+id/save"
@@ -113,7 +113,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
@@ -121,29 +121,31 @@
         android:gravity="center"
         android:inputType="numberSigned"
         android:textSize="14sp"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/txtDate"
         app:layout_constraintTop_toTopOf="@+id/textView2"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editLength"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
         android:background="@drawable/shape_input_info"
         android:gravity="center"
+        android:text="0"
         android:inputType="numberSigned"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/txtDate"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtDate"
         android:layout_width="150dp"
         android:layout_height="0dp"
         android:layout_marginEnd="32dp"
@@ -156,7 +158,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/txtPW"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -166,12 +168,12 @@
         android:textColor="@color/app_color"
         android:text="+"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toBottomOf="@+id/editWeight"
+        app:layout_constraintEnd_toEndOf="@+id/editWeight"
+        app:layout_constraintTop_toTopOf="@+id/editWeight" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtMW"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -181,12 +183,12 @@
         android:text="-"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toBottomOf="@+id/editWeight"
+        app:layout_constraintStart_toStartOf="@+id/editWeight"
+        app:layout_constraintTop_toTopOf="@+id/editWeight" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtPL"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -196,11 +198,11 @@
         android:text="+"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintEnd_toEndOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editLength"
+        app:layout_constraintEnd_toEndOf="@+id/editLength"
+        app:layout_constraintTop_toTopOf="@+id/editLength" />
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/txtML"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -210,9 +212,9 @@
         android:text="-"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editLength"
+        app:layout_constraintStart_toStartOf="@+id/editLength"
+        app:layout_constraintTop_toTopOf="@+id/editLength" />
 
     <TextView
         android:id="@+id/textView18"
@@ -221,7 +223,7 @@
         android:layout_marginEnd="4dp"
         android:text="kg"
         android:textColor="@color/app_color"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toBottomOf="@+id/editWeight"
+        app:layout_constraintEnd_toEndOf="@+id/txtDate"
+        app:layout_constraintTop_toTopOf="@+id/editWeight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
