--- a/app/src/main/res/layout/activity_all_foods.xml
+++ b/app/src/main/res/layout/activity_all_foods.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
-        android:text="Food List"
+        android:text="All Foods"
         android:textColor="@color/app_color"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,9 +25,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:id="@+id/recyclerFoods"
         android:layout_marginStart="1dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="1dp"
+        tools:listitem="@layout/row_food"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
