--- a/app/src/main/res/layout/activity_complete_info.xml
+++ b/app/src/main/res/layout/activity_complete_info.xml
@@ -14,9 +14,9 @@
         android:layout_height="wrap_content"
         android:text="cm"
         android:textColor="@color/app_color"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextLength"
         app:layout_constraintEnd_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintTop_toTopOf="@+id/editTextLength" />
 
     <Button
         android:id="@+id/register"
@@ -26,46 +26,13 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="32dp"
         android:background="@color/app_color"
-        android:text="@string/sign_up"
+        android:text="@string/save_data"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:ignore="TouchTargetSizeCheck" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
-            android:gravity="center"
-            android:text="@string/have_account"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
-
-        <Button
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:elevation="0dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/login"
-            android:textColor="@color/app_color"
-            android:textSize="15sp"
-            tools:ignore="TouchTargetSizeCheck" />
-
-    </LinearLayout>
 
     <TextView
 
@@ -137,12 +104,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
+        android:checkedButton="@id/radioMale"
+        app:layout_constraintEnd_toEndOf="@+id/txtDOB"
+        app:layout_constraintStart_toStartOf="@+id/txtDOB"
         app:layout_constraintTop_toTopOf="@+id/textView">
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/radioMale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -163,7 +131,7 @@
     </RadioGroup>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
@@ -171,6 +139,8 @@
         android:gravity="center"
         android:inputType="numberSigned"
         android:textSize="14sp"
+
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintStart_toStartOf="@+id/radioGroup"
@@ -178,7 +148,7 @@
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/editTextLength"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="4dp"
@@ -186,6 +156,7 @@
         android:gravity="center"
         android:inputType="numberSigned"
         android:textSize="14sp"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView19"
         app:layout_constraintStart_toStartOf="@+id/radioGroup"
@@ -193,7 +164,7 @@
         tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtDOB"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
@@ -208,7 +179,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/txtPlusWeight"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -218,12 +189,12 @@
         android:textColor="@color/app_color"
         android:text="+"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
+        app:layout_constraintEnd_toEndOf="@+id/editTextWeight"
+        app:layout_constraintTop_toTopOf="@+id/editTextWeight" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtMWeight"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -233,12 +204,12 @@
         android:text="-"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
+        app:layout_constraintStart_toStartOf="@+id/editTextWeight"
+        app:layout_constraintTop_toTopOf="@+id/editTextWeight" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtPlusLength"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -248,11 +219,11 @@
         android:text="+"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintEnd_toEndOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextLength"
+        app:layout_constraintEnd_toEndOf="@+id/editTextLength"
+        app:layout_constraintTop_toTopOf="@+id/editTextLength" />
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/txtMLength"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/shape_input_info"
@@ -262,9 +233,9 @@
         android:text="-"
         android:textColor="@color/app_color"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText1"
-        app:layout_constraintStart_toStartOf="@+id/editText1"
-        app:layout_constraintTop_toTopOf="@+id/editText1" />
+        app:layout_constraintBottom_toBottomOf="@+id/editTextLength"
+        app:layout_constraintStart_toStartOf="@+id/editTextLength"
+        app:layout_constraintTop_toTopOf="@+id/editTextLength" />
 
     <TextView
         android:id="@+id/textView18"
@@ -273,7 +244,7 @@
         android:layout_marginEnd="4dp"
         android:text="kg"
         android:textColor="@color/app_color"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextWeight"
         app:layout_constraintEnd_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintTop_toTopOf="@+id/editTextWeight" />
 </androidx.constraintlayout.widget.ConstraintLayout>
