--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
+                android:id="@+id/userName"
                 android:fontFamily="@font/poppins_regular"
                 tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
 
@@ -65,7 +66,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password"
+            android:id="@+id/password1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -74,6 +75,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
+                android:id="@+id/password"
                 android:fontFamily="@font/poppins_regular"
                 android:inputType="textPassword"
                 tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">
