--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,9 @@
         <item name="android:includeFontPadding">false</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="dialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/app_color</item>
+        <item name="colorPrimaryDark">@color/app_color</item>
+        <item name="colorAccent">@color/app_color</item>
+    </style>
 </resources>
